# news-parser

./: .gitignore  pyproject.toml
src/news_parser/: __init__.py  cnn.py  common.py  fox.py  utils.py
tests/: cnn_test.py  fox_test.py
tests/samples/: apnews.html  cnn.html  fox.html  politico.html  reuters.html  thehill.html  washingtonexaminer.html
