[project]
name = "news-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rickenbacker620", email = "fu78sion@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "parsel>=1.10.0",
    "pydantic>=2.11.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
